--- a/petshop.html
+++ b/petshop.html
@@ -1,5 +1,5 @@
 <!-- petshop.html -->
-<section id="petshop" style="position:relative; min-height:80vh; font-family:'Vazirmatn','IBM Plex Sans',sans-serif; color:hsl(210,100%,20%); background:linear-gradient(180deg, hsl(0,0%,98%) 0%, hsl(0,0%,96%) 100%); overflow:hidden; padding:6rem 1rem;">
+<section id="petshop" style="position:relative; min-height:80vh; font-family:'Vazirmatn','IBM Plex Sans',sans-serif; color:hsl(210,100%,20%); background:linear-gradient(180deg, hsl(0,0%,96%) 0%, hsl(0,0%,98%) 100%); overflow:hidden; padding:6rem 1rem;">
 
   <!-- پس‌زمینه تزئینی -->
   <div style="position:absolute; top:-100px; right:-50px; width:350px; height:350px; background:rgba(27,79,52,0.08); border-radius:50%; filter:blur(120px); animation:float 8s ease-in-out infinite;"></div>
@@ -10,7 +10,7 @@
     <!-- عنوان بخش -->
     <div style="text-align:center; margin-bottom:4rem; animation:fadeIn 1s ease-out forwards;">
       <h2 style="font-size:2.5rem; font-weight:700; margin-bottom:1rem; color:hsl(210,100%,20%);">محصولات پت‌شاپ</h2>
-      <p style="font-size:1.1rem; color:hsl(210,30%,40%); margin-bottom:0.75rem;">تغذیه، مراقبت و سرگرمی حیوانات خانگی</p>
+      <p style="font-size:1.1rem; color:hsl(210,30%,40%); margin-bottom:0.75rem;">خوراک، بهداشت و سرگرمی حیوانات</p>
       <div style="width:80px; height:4px; background:hsl(27,79%,52%); margin:0 auto; border-radius:1rem;"></div>
     </div>
 
@@ -23,19 +23,19 @@
         <div style="position:relative; z-index:1; color:hsl(0,0%,98%); text-align:center;">
           <div style="font-size:4rem; margin-bottom:1rem;">🐶</div>
           <h3 style="font-size:1.75rem; font-weight:700; margin-bottom:0.5rem;">محصولات حیوانات خانگی</h3>
-          <p style="color:rgba(255,255,255,0.8);">تغذیه، بهداشت و سرگرمی حیوانات</p>
+          <p style="color:rgba(255,255,255,0.8);">خوراک، لوازم بهداشتی و سرگرمی برای حیوانات</p>
         </div>
       </div>
 
       <!-- متن و ویژگی‌ها -->
       <div class="glass-card fadeIn" style="animation-delay:0.3s;">
         <p style="font-size:1.15rem; line-height:1.8; margin-bottom:2rem;">
-          گروه Sahand Apex امکان ارائه محصولات <strong style="color:hsl(27,79%,52%);">حیوانات خانگی</strong> را برای فروشگاه‌ها و پت‌شاپ‌ها فراهم می‌کند. تمرکز بر کیفیت و تنوع محصولات حیوانات خانگی است.
+          برای فروشگاه‌ها و پت‌شاپ‌هایی که به دنبال <strong style="color:hsl(27,79%,52%);">محصولات حیوانات خانگی با کیفیت</strong> هستند، گروه Sahand Apex امکان ارائه محصولات متنوع و با برند اختصاصی مشتری را فراهم می‌کند.
         </p>
 
         <!-- لیست ویژگی‌ها -->
         <div style="display:flex; flex-direction:column; gap:1rem; margin-bottom:2rem;">
-          <div class="feature"><span style="color:hsl(27,79%,52%);">✅</span> تغذیه و خوراک سالم</div>
+          <div class="feature"><span style="color:hsl(27,79%,52%);">✅</span> خوراک با کیفیت و متنوع</div>
           <div class="feature"><span style="color:hsl(27,79%,52%);">✅</span> لوازم بهداشتی و مراقبت</div>
           <div class="feature"><span style="color:hsl(27,79%,52%);">✅</span> اسباب‌بازی و سرگرمی</div>
         </div>
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <!-- CSS مخصوص PetShop مشابه Office -->
+  <!-- CSS مخصوص PetShop -->
   <style>
     @keyframes float {
       0%,100%{ transform:translateY(0px);}
