--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
 
     // لود بخش‌ها
 // 🚀 لود بخش‌ها (نسخه مخصوص GitHub Pages)
-loadSection('hero', 'hero.html');
-loadSection('introduction', 'introduction.html');
-loadSection('story', 'story.html');
-loadSection('office', 'office.html');
-loadSection('petshop', 'petshop.html');
-loadSection('philosophy', 'philosophy.html');
-loadSection('bio', 'bio.html');
-loadSection('footer', 'footer.html');
+loadSection('hero', '/hero.html');
+loadSection('introduction', '/introduction.html');
+loadSection('story', '/story.html');
+loadSection('office', '/office.html');
+loadSection('petshop', '/petshop.html');
+loadSection('philosophy', '/philosophy.html');
+loadSection('bio', '/bio.html');
+loadSection('footer', '/footer.html');
 
   </script>
 </body>
