--- a/index.html
+++ b/index.html
@@ -7,179 +7,87 @@
 
   <!-- فونت‌ها -->
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-  <style>
-    /* 🌈 سیستم رنگ و طراحی - مطابق فایل اصلی React/Tailwind */
-    :root {
-      --background: hsl(0, 0%, 96%);
-      --foreground: hsl(210, 100%, 20%);
-      --card: hsl(0, 0%, 100%);
-      --accent: hsl(27, 79%, 52%);
-      --accent-hover: hsl(27, 79%, 58%);
-      --accent-foreground: hsl(0, 0%, 98%);
-      --primary: hsl(210, 100%, 20%);
-      --primary-hover: hsl(210, 100%, 25%);
-      --primary-foreground: hsl(0, 0%, 98%);
-      --muted: hsl(0, 0%, 93%);
-      --border: hsl(0, 0%, 89%);
-      --radius: 0.75rem;
-      --transition-smooth: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Vazirmatn', 'IBM Plex Sans', sans-serif;
-      background: var(--background);
-      color: var(--foreground);
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      overflow-x: hidden;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 1rem;
-    }
-
-    /* ناوبری */
-    nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 50;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(10px);
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-      transition: var(--transition-smooth);
-    }
-
-    nav a {
-      text-decoration: none;
-      color: var(--foreground);
-      margin: 0 1rem;
-      font-weight: 500;
-      position: relative;
-      transition: var(--transition-smooth);
-    }
-
-    nav a:hover {
-      color: var(--accent);
-    }
-
-    nav a::after {
-      content: '';
-      position: absolute;
-      bottom: -4px;
-      left: 0;
-      width: 0%;
-      height: 2px;
-      background: var(--accent);
-      transition: width var(--transition-smooth);
-    }
-
-    nav a:hover::after {
-      width: 100%;
-    }
-
-    .nav-logo {
-      font-weight: 700;
-      font-size: 1.5rem;
-      color: var(--primary);
-    }
-
-    /* برای حالت موبایل */
-    @media (max-width: 768px) {
-      nav {
-        flex-wrap: wrap;
-      }
-      .nav-links {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        text-align: right;
-      }
-      .nav-links.active {
-        display: flex;
-        background: rgba(255,255,255,0.98);
-        padding: 1rem;
-        border-top: 1px solid var(--border);
-      }
-      .menu-toggle {
-        display: block;
-        cursor: pointer;
-        font-size: 1.5rem;
-      }
-    }
-
-/* Box sizing برای همه */
-* {
-  box-sizing: border-box;
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+<link href="https://cdn.fontcdn.ir/Font/Persian/IRANSans.css" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+:root {
+  --background: hsl(0,0%,96%);
+  --foreground: hsl(210,100%,20%);
+  --card: hsl(0,0%,100%);
+  --accent: hsl(27,79%,52%);
+  --accent-hover: hsl(27,79%,58%);
+  --primary: hsl(210,100%,20%);
+  --primary-hover: hsl(210,100%,25%);
+  --border: hsl(0,0%,89%);
+  --radius: 0.75rem;
+  --transition: 0.3s cubic-bezier(0.4,0,0.2,1);
 }
 
-/* کاهش padding و margin برای موبایل */
-@media (max-width: 480px) {
-  section {
-    padding: 3rem 1rem; /* کمتر از 6rem */
-  }
+* { box-sizing: border-box; margin:0; padding:0; }
 
-  /* عنوان‌ها */
-  h1 { font-size: 1.8rem; }
-  h2 { font-size: 1.5rem; }
-  h3 { font-size: 1.2rem; }
-
-  /* دکمه‌ها */
-  .btn-primary {
-    padding: 0.6rem 1rem;
-    font-size: 0.9rem;
-  }
-
-  /* کارت‌ها */
-  .container > div[style*="display:grid"] {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)) !important;
-    gap: 1rem !important;
-  }
-
-  /* فونت متن‌ها */
-  p { font-size: 0.95rem; line-height: 1.6; }
-
-  /* Nav موبایل */
-  nav {
-    padding: 0.8rem 1rem;
-  }
-
-  .nav-links a {
-    margin: 0.5rem 0;
-    font-size: 0.95rem;
-  }
+body {
+  font-family: 'IRANSans','Vazirmatn','IBM Plex Sans',sans-serif;
+  background: var(--background);
+  color: var(--foreground);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
+.container { max-width:1200px; margin:0 auto; padding:0 1rem; }
 
-    /* 🌀 انیمیشن‌های عمومی */
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+nav {
+  position:fixed; top:0; left:0; right:0; z-index:50;
+  display:flex; justify-content:space-between; align-items:center;
+  padding:1rem 2rem; background:rgba(255,255,255,0.95);
+  backdrop-filter: blur(10px); box-shadow:0 2px 6px rgba(0,0,0,0.05);
+  transition: var(--transition);
+}
 
-    .fade-in {
-      animation: fadeIn 0.8s ease-out forwards;
-    }
+.nav-logo { font-weight:700; font-size:1.5rem; color:var(--primary); }
+nav a {
+  text-decoration:none; color:var(--foreground); margin:0 1rem;
+  font-weight:500; position:relative; transition: var(--transition);
+}
+nav a::after {
+  content:''; position:absolute; bottom:-4px; left:0;
+  width:0%; height:2px; background:var(--accent); transition: width var(--transition);
+}
+nav a:hover::after { width:100%; }
+nav a:hover { color: var(--accent); }
 
-    /* محل بارگذاری بخش‌ها */
-    main {
-      margin-top: 80px;
-    }
+.menu-toggle { display:none; font-size:1.5rem; cursor:pointer; }
+.nav-links { display:flex; gap:1rem; }
+@media(max-width:768px){
+  nav { flex-wrap:wrap; padding:0.8rem 1rem; }
+  .menu-toggle { display:block; }
+  .nav-links { display:none; flex-direction:column; width:100%; text-align:right; padding:1rem 0; border-top:1px solid var(--border); }
+  .nav-links.active { display:flex; background:rgba(255,255,255,0.98); }
+  .nav-links a { margin:0.5rem 0; font-size:0.95rem; }
+}
 
-    section {
-      min-height: 60vh;
-      padding: 4rem 0;
-    }
-  </style>
+section { min-height:60vh; padding:4rem 0; }
+.btn-primary {
+  background: var(--accent); color: var(--primary-hover);
+  padding:0.75rem 1.5rem; border:none; border-radius: var(--radius);
+  font-weight:600; cursor:pointer; transition: var(--transition); width: auto;
+}
+.btn-primary:hover { background: var(--accent-hover); transform:translateY(-2px); }
+
+@keyframes fadeIn { from{opacity:0; transform:translateY(10px);} to{opacity:1; transform:translateY(0);} }
+.fade-in { animation:fadeIn 0.8s ease-out forwards; }
+
+@media(max-width:480px){
+  section { padding:3rem 1rem; }
+  h1 { font-size:1.8rem; }
+  h2 { font-size:1.5rem; }
+  h3 { font-size:1.2rem; }
+  p { font-size:0.95rem; line-height:1.5; }
+  .btn-primary { padding:0.6rem 1rem; font-size:0.9rem; width:100%; }
+  .container > div[style*="display:grid"] { grid-template-columns: repeat(auto-fit,minmax(180px,1fr)) !important; gap:1rem !important; }
+}
+</style>
 </head>
 
 <body>
