--- a/index.html
+++ b/index.html
@@ -7,119 +7,142 @@
 
   <!-- فونت‌ها -->
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-<link href="https://cdn.fontcdn.ir/Font/Persian/IRANSans.css" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-/* 🎨 طراحی واکنش‌گرا و تمیز */
-:root {
-  --background: hsl(0, 0%, 96%);
-  --foreground: hsl(210, 100%, 20%);
-  --accent: hsl(27, 79%, 52%);
-  --accent-hover: hsl(27, 79%, 58%);
-  --border: hsl(0, 0%, 85%);
-  --radius: 0.75rem;
-  --transition: 0.3s ease;
-}
 
-body {
-  margin: 0;
-  font-family: 'Vazirmatn', 'IBM Plex Sans', sans-serif;
-  background: var(--background);
-  color: var(--foreground);
-  overflow-x: hidden;
-}
+  <style>
+    /* 🌈 سیستم رنگ و طراحی - مطابق فایل اصلی React/Tailwind */
+    :root {
+      --background: hsl(0, 0%, 96%);
+      --foreground: hsl(210, 100%, 20%);
+      --card: hsl(0, 0%, 100%);
+      --accent: hsl(27, 79%, 52%);
+      --accent-hover: hsl(27, 79%, 58%);
+      --accent-foreground: hsl(0, 0%, 98%);
+      --primary: hsl(210, 100%, 20%);
+      --primary-hover: hsl(210, 100%, 25%);
+      --primary-foreground: hsl(0, 0%, 98%);
+      --muted: hsl(0, 0%, 93%);
+      --border: hsl(0, 0%, 89%);
+      --radius: 0.75rem;
+      --transition-smooth: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-/* ✅ ناوبری ریسپانسیو */
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 100;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.75rem 1rem;
-  background: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(12px);
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-  transition: var(--transition);
-}
+    body {
+      margin: 0;
+      font-family: 'Vazirmatn', 'IBM Plex Sans', sans-serif;
+      background: var(--background);
+      color: var(--foreground);
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      overflow-x: hidden;
+    }
 
-.nav-logo {
-  font-weight: 700;
-  font-size: 1.4rem;
-  color: var(--foreground);
-}
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 1rem;
+    }
 
-/* لینک‌ها */
-.nav-links {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
+    /* ناوبری */
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 50;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      transition: var(--transition-smooth);
+    }
 
-.nav-links a {
-  text-decoration: none;
-  color: var(--foreground);
-  font-weight: 500;
-  transition: color var(--transition);
-}
+    nav a {
+      text-decoration: none;
+      color: var(--foreground);
+      margin: 0 1rem;
+      font-weight: 500;
+      position: relative;
+      transition: var(--transition-smooth);
+    }
 
-.nav-links a:hover,
-.nav-links a:active {
-  color: var(--accent-hover);
-}
+    nav a:hover {
+      color: var(--accent);
+    }
 
-/* دکمه منو */
-.menu-toggle {
-  display: none;
-  font-size: 1.6rem;
-  cursor: pointer;
-  color: var(--accent);
-}
+    nav a::after {
+      content: '';
+      position: absolute;
+      bottom: -4px;
+      left: 0;
+      width: 0%;
+      height: 2px;
+      background: var(--accent);
+      transition: width var(--transition-smooth);
+    }
 
-/* 📱 حالت موبایل */
-@media (max-width: 768px) {
-  nav {
-    flex-wrap: wrap;
-    padding: 0.75rem 1rem;
-  }
+    nav a:hover::after {
+      width: 100%;
+    }
 
-  .menu-toggle {
-    display: block;
-  }
+    .nav-logo {
+      font-weight: 700;
+      font-size: 1.5rem;
+      color: var(--primary);
+    }
 
-  .nav-links {
-    display: none;
-    flex-direction: column;
-    width: 100%;
-    text-align: right;
-    background: white;
-    border-top: 1px solid var(--border);
-    margin-top: 0.75rem;
-    padding: 0.75rem 1rem;
-    border-radius: var(--radius);
-    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-  }
+    /* برای حالت موبایل */
+    @media (max-width: 768px) {
+      nav {
+        flex-wrap: wrap;
+      }
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        text-align: right;
+      }
+      .nav-links.active {
+        display: flex;
+        background: rgba(255,255,255,0.98);
+        padding: 1rem;
+        border-top: 1px solid var(--border);
+      }
+      .menu-toggle {
+        display: block;
+        cursor: pointer;
+        font-size: 1.5rem;
+      }
+    }
 
-  .nav-links.active {
-    display: flex;
-  }
+    @media (min-width: 769px) {
+      .menu-toggle {
+        display: none;
+      }
+    }
 
-  .nav-links a {
-    padding: 0.5rem 0;
-    font-size: 1rem;
-  }
-}
+    /* 🌀 انیمیشن‌های عمومی */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
-/* ✨ محتوای اصلی */
-main {
-  margin-top: 70px; /* ارتفاع منو */
-  padding: 1rem;
-}
-</style>
+    .fade-in {
+      animation: fadeIn 0.8s ease-out forwards;
+    }
+
+    /* محل بارگذاری بخش‌ها */
+    main {
+      margin-top: 80px;
+    }
+
+    section {
+      min-height: 60vh;
+      padding: 4rem 0;
+    }
+  </style>
 </head>
 
 <body>
@@ -172,16 +195,14 @@ main {
     }
 
     // لود بخش‌ها
-// 🚀 لود بخش‌ها (نسخه مخصوص GitHub Pages)
-loadSection('hero', '/hero.html');
-loadSection('introduction', '/introduction.html');
-loadSection('story', '/story.html');
-loadSection('office', '/office.html');
-loadSection('petshop', '/petshop.html');
-loadSection('philosophy', '/philosophy.html');
-loadSection('bio', '/bio.html');
-loadSection('footer', '/footer.html');
-
+    loadSection('hero', 'sections/hero.html');
+    loadSection('introduction', 'sections/introduction.html');
+    loadSection('story', 'sections/story.html');
+    loadSection('office', 'sections/office.html');
+    loadSection('petshop', 'sections/petshop.html');
+    loadSection('philosophy', 'sections/philosophy.html');
+    loadSection('bio', 'sections/bio.html');
+    loadSection('footer', 'sections/footer.html');
   </script>
 </body>
 </html>
