--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
     }
 
     // لود بخش‌ها
-    loadSection('hero', 'sections/hero.html');
-    loadSection('introduction', 'sections/introduction.html');
-    loadSection('story', 'sections/story.html');
-    loadSection('office', 'sections/office.html');
-    loadSection('petshop', 'sections/petshop.html');
-    loadSection('philosophy', 'sections/philosophy.html');
-    loadSection('bio', 'sections/bio.html');
-    loadSection('footer', 'sections/footer.html');
+    loadSection('hero', '/hero.html');
+    loadSection('introduction', '/introduction.html');
+    loadSection('story', '/story.html');
+    loadSection('office', '/office.html');
+    loadSection('petshop', '/petshop.html');
+    loadSection('philosophy', '/philosophy.html');
+    loadSection('bio', '/bio.html');
+    loadSection('footer', '/footer.html');
   </script>
 </body>
 </html>
