--- a/index.html
+++ b/index.html
@@ -195,14 +195,16 @@
     }
 
     // لود بخش‌ها
-    loadSection('hero', '/hero.html');
-    loadSection('introduction', '/introduction.html');
-    loadSection('story', '/story.html');
-    loadSection('office', '/office.html');
-    loadSection('petshop', '/petshop.html');
-    loadSection('philosophy', '/philosophy.html');
-    loadSection('bio', '/bio.html');
-    loadSection('footer', '/footer.html');
+// 🚀 لود بخش‌ها (نسخه مخصوص GitHub Pages)
+loadSection('hero', '/hero.html');
+loadSection('introduction', '/introduction.html');
+loadSection('story', '/story.html');
+loadSection('office', '/office.html');
+loadSection('petshop', '/petshop.html');
+loadSection('philosophy', '/philosophy.html');
+loadSection('bio', '/bio.html');
+loadSection('footer', '/footer.html');
+
   </script>
 </body>
 </html>
