--- a/hero.html
+++ b/hero.html
@@ -1,130 +1,79 @@
-<!-- hero.html (نسخه دقیق و ریسپانسیو با تنظیمات 20٪ برای دسکتاپ و موبایل) -->
-<section id="hero" style="position:relative; min-height:100vh; display:flex; align-items:center; justify-content:center; overflow:hidden; font-family:'Vazirmatn','IBM Plex Sans',sans-serif; text-align:center; color:hsl(0,0%,98%);">
+<!-- hero.html -->
+<section id="hero" style="position:relative; min-height:100vh; display:flex; align-items:center; justify-content:center; overflow:hidden; font-family:'Vazirmatn','IBM Plex Sans',sans-serif; padding:4rem 1rem;">
+  
+  <!-- پس‌زمینه گرادینتی -->
+  <div style="position:absolute; inset:0; background:linear-gradient(135deg, hsl(210,100%,20%), hsl(210,100%,30%)); z-index:0;"></div>
+  
+  <!-- عناصر نوری -->
+  <div class="float-element" style="position:absolute; width:300px; height:300px; top:10%; right:5%; background:rgba(230,126,34,0.1); border-radius:50%; filter:blur(120px); z-index:1;"></div>
+  <div class="float-element" style="position:absolute; width:400px; height:400px; bottom:5%; left:5%; background:rgba(27,79,52,0.05); border-radius:50%; filter:blur(150px); z-index:1;"></div>
 
-  <!-- 🎨 پس‌زمینه گرادینتی -->
-  <div style="position:absolute; inset:0; background:linear-gradient(135deg, hsl(210,100%,20%), hsl(210,100%,28%)); z-index:0;"></div>
-
-  <!-- 🌕 المان‌های شناور تزئینی -->
-  <div class="float-element" style="position:absolute; width:320px; height:320px; top:10%; right:5%; background:rgba(230,126,34,0.1); border-radius:50%; filter:blur(120px); z-index:1;"></div>
-  <div class="float-element" style="position:absolute; width:450px; height:450px; bottom:5%; left:5%; background:rgba(27,79,52,0.06); border-radius:50%; filter:blur(160px); z-index:1;"></div>
-
-  <!-- 📦 محتوای اصلی -->
-  <div style="position:relative; z-index:2; max-width:720px; padding:0 1rem;">
-
-    <!-- 🔹 Badge -->
-    <div class="badge">
+  <!-- محتوای اصلی -->
+  <div style="position:relative; z-index:2; text-align:center; max-width:700px; margin:auto;">
+    
+    <!-- Badge -->
+    <div style="display:inline-flex; align-items:center; gap:0.5rem; padding:0.5rem 1rem; border-radius:999px; background:rgba(255,255,255,0.2); border:1px solid rgba(255,255,255,0.3); margin-bottom:2rem; animation:fadeIn 1s ease-out forwards;">
       <span>📦</span>
-      <span>تأمین و واردات B2B</span>
+      <span style="font-weight:500;">تأمین و واردات B2B</span>
     </div>
 
-    <!-- 🔸 عنوان اصلی -->
-    <h1 class="hero-title">
-      گروه <br><span>Sahand Apex</span>
+    <!-- عنوان -->
+    <h1 style="font-size:4rem; font-weight:700; line-height:1.2; margin-bottom:1rem; animation:slideUp 1s ease-out forwards; animation-delay:0.2s; background:linear-gradient(135deg, hsl(27,79%,52%), hsl(210,100%,20%)); -webkit-background-clip:text; -webkit-text-fill-color:transparent;">
+      گروه <br><span style="color:hsl(27,79%,52%)">Sahand Apex</span>
     </h1>
 
-    <!-- 📝 توضیح کوتاه -->
-    <p class="hero-desc">
+    <!-- توضیح -->
+    <p style="font-size:1.25rem; margin-bottom:2rem; line-height:1.5; color:hsl(0,0%,98%); animation:fadeIn 1s ease-out forwards; animation-delay:0.4s;">
       تأمین‌کننده و واردکننده محصولات <strong>B2B</strong> در حوزه ملزومات اداری و پت‌شاپ
     </p>
 
-    <!-- 🧭 دکمه‌ها -->
-    <div class="hero-buttons">
-      <button class="btn-primary" onclick="document.getElementById('office').scrollIntoView({behavior:'smooth'})">🛒 مشاهده محصولات</button>
-      <button class="btn-outline" onclick="document.getElementById('story').scrollIntoView({behavior:'smooth'})">درباره ما</button>
+    <!-- دکمه‌ها -->
+    <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:1rem; margin-bottom:3rem;">
+      <button class="btn-primary" onclick="document.getElementById('office').scrollIntoView({behavior:'smooth'})">
+        🛒 مشاهده محصولات
+      </button>
+      <button class="btn-outline" onclick="document.getElementById('story').scrollIntoView({behavior:'smooth'})">
+        درباره ما
+      </button>
     </div>
 
-    <!-- 📊 آمار -->
-    <div class="hero-stats">
+    <!-- آمار -->
+    <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(150px,1fr)); gap:1rem; max-width:600px; margin:0 auto;">
       <div class="glass-card">
-        <div class="stat-number">100+</div>
-        <div class="stat-text">محصولات متنوع</div>
+        <div style="font-size:2rem; font-weight:700; color:hsl(27,79%,52%);">100+</div>
+        <div>محصولات متنوع</div>
       </div>
       <div class="glass-card">
-        <div class="stat-number">B2B</div>
-        <div class="stat-text">همکاری با کسب‌وکارها</div>
+        <div style="font-size:2rem; font-weight:700; color:hsl(27,79%,52%);">B2B</div>
+        <div>همکاری با کسب‌وکارها</div>
       </div>
       <div class="glass-card">
-        <div class="stat-number">24/7</div>
-        <div class="stat-text">پشتیبانی مداوم</div>
+        <div style="font-size:2rem; font-weight:700; color:hsl(27,79%,52%);">24/7</div>
+        <div>پشتیبانی</div>
       </div>
     </div>
   </div>
 
   <!-- 🎨 CSS -->
   <style>
-    /* 🌈 انیمیشن‌ها */
-    @keyframes float {
-      0%,100% { transform:translateY(0); }
-      50% { transform:translateY(-15px); }
-    }
-    @keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
-    @keyframes slideUp { from{opacity:0; transform:translateY(20px);} to{opacity:1; transform:translateY(0);} }
-
+    @keyframes float { 0%,100%{ transform:translateY(0px);} 50%{ transform:translateY(-15px);} }
     .float-element { animation:float 6s ease-in-out infinite; }
 
-    /* 🟢 Badge */
-    .badge {
-      display:inline-flex;
-      align-items:center;
-      gap:0.5rem;
-      padding:0.5rem 1rem;
-      border-radius:999px;
-      background:rgba(255,255,255,0.2);
-      border:1px solid rgba(255,255,255,0.3);
-      margin-bottom:2rem;
-      backdrop-filter:blur(10px);
-      font-weight:500;
-      animation:fadeIn 1s ease-out forwards;
-    }
-
-    /* 🔵 عنوان */
-    .hero-title {
-      font-size:3rem;
-      font-weight:700;
-      line-height:1.3;
-      margin-bottom:1rem;
-      animation:slideUp 1s ease-out forwards;
-      animation-delay:0.2s;
-      background:linear-gradient(135deg, hsl(27,79%,52%), hsl(0,0%,98%));
-      -webkit-background-clip:text;
-      -webkit-text-fill-color:transparent;
-    }
-    .hero-title span { color:hsl(27,79%,52%); }
-
-    /* 🟣 توضیح */
-    .hero-desc {
-      font-size:1.1rem;
-      line-height:1.8;
-      margin-bottom:2rem;
-      color:hsl(0,0%,98%);
-      animation:fadeIn 1s ease-out forwards;
-      animation-delay:0.4s;
-    }
-
-    /* 🟠 دکمه‌ها */
-    .hero-buttons {
-      display:flex;
-      flex-wrap:wrap;
-      justify-content:center;
-      gap:1rem;
-      margin-bottom:3rem;
-    }
+    @keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
+    @keyframes slideUp { from{opacity:0; transform:translateY(20px);} to{opacity:1; transform:translateY(0);} }
 
     .btn-primary {
       background:hsl(27,79%,52%);
       color:hsl(0,0%,98%);
-      padding:0.8rem 1.6rem;
+      padding:0.75rem 1.5rem;
       border-radius:0.75rem;
       border:none;
       cursor:pointer;
       font-weight:600;
-      transition:0.3s;
+      transition:0.3s all;
       box-shadow:0 5px 15px rgba(0,0,0,0.1);
     }
-    .btn-primary:hover {
-      background:hsl(27,79%,58%);
-      transform:translateY(-3px);
-    }
+    .btn-primary:hover { background:hsl(27,79%,58%); transform:translateY(-3px); box-shadow:0 8px 20px rgba(0,0,0,0.15); }
 
     .btn-outline {
       background:transparent;
@@ -134,21 +83,9 @@
       border-radius:0.75rem;
       cursor:pointer;
       font-weight:600;
-      transition:0.3s;
+      transition:0.3s all;
     }
-    .btn-outline:hover {
-      background:rgba(255,255,255,0.2);
-      transform:translateY(-2px);
-    }
-
-    /* 🔶 آمار */
-    .hero-stats {
-      display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(150px, 1fr));
-      gap:1rem;
-      max-width:600px;
-      margin:0 auto;
-    }
+    .btn-outline:hover { background:rgba(255,255,255,0.2); transform:translateY(-2px); }
 
     .glass-card {
       background:rgba(255,255,255,0.1);
@@ -156,51 +93,35 @@
       padding:1.5rem;
       border-radius:1rem;
       text-align:center;
-      transition:0.3s;
-      color:hsl(0,0%,98%);
+      transition:0.3s all;
     }
-    .glass-card:hover {
-      transform:translateY(-5px);
-      box-shadow:0 10px 20px rgba(0,0,0,0.2);
-    }
+    .glass-card:hover { transform:translateY(-5px); box-shadow:0 10px 20px rgba(0,0,0,0.2); }
 
-    .stat-number {
-      font-size:2rem;
-      font-weight:700;
-      color:hsl(27,79%,52%);
-    }
-    .stat-text {
-      font-size:1rem;
-      margin-top:0.25rem;
-    }
-
-    /* 📱 موبایل - ۲۰٪ کوچک‌تر */
-    @media(max-width:768px){
-      .hero-title { font-size:2.4rem; line-height:1.4; }
-      .hero-desc { font-size:0.9rem; line-height:1.6; }
-      .badge { padding:0.4rem 0.8rem; font-size:0.9rem; }
-      .btn-primary, .btn-outline { width:100%; font-size:0.9rem; padding:0.65rem 1.2rem; }
-      .glass-card { padding:1rem; }
-      .stat-number { font-size:1.6rem; }
-      .stat-text { font-size:0.9rem; }
-      .hero-stats { gap:0.8rem; }
-    }
-
-    /* 💻 دسکتاپ بزرگ (1200px به بالا) - ۲۰٪ بزرگ‌تر */
-    @media(min-width:1200px){
-      .hero-title { font-size:3.6rem; }
-      .hero-desc { font-size:1.3rem; line-height:1.9; }
-      .btn-primary, .btn-outline { font-size:1.15rem; padding:1rem 2rem; }
-      .glass-card { padding:2rem; }
-      .stat-number { font-size:2.4rem; }
-      .stat-text { font-size:1.1rem; }
-      .badge { font-size:1.1rem; padding:0.6rem 1.3rem; }
+    /* 📱 تنظیمات مخصوص موبایل */
+    @media (max-width: 768px) {
+      #hero {
+        padding: 5rem 1.25rem 3rem 1.25rem !important;
+      }
+      #hero h1 {
+        font-size: 2.4rem !important;
+        line-height: 1.3 !important;
+      }
+      #hero p {
+        font-size: 1rem !important;
+      }
+      #hero .btn-primary,
+      #hero .btn-outline {
+        width: 100%;
+        max-width: 300px;
+      }
+      .glass-card {
+        padding:1.2rem;
+      }
     }
   </style>
 
-  <!-- ⚙️ JS -->
+  <!-- 🎬 JS -->
   <script>
-    // افکت شناوری نرم برای بک‌گراند
     const floats = document.querySelectorAll('#hero .float-element');
     floats.forEach(el=>{
       let pos=0, dir=1;
